# urirun-connector-netscan

./: README.md  local.dev.txt  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
scripts/: ci_urirun_llm_smoke.py
tests/: test_netscan_core.py
urirun_connector_netscan/: __init__.py  connector.manifest.json  contracts.py  core.py
