[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-netscan"
version = "0.1.0"
description = "Opt-in LAN discovery of urirun nodes for ifuri and urirun (netscan://)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = ["urirun>=0.4.14"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://connect.ifuri.com/connectors/netscan"
Repository = "https://github.com/if-uri/urirun-connector-netscan"

[project.scripts]
urirun-netscan = "urirun_connector_netscan.core:main"

[project.entry-points."urirun.bindings"]
netscan = "urirun_connector_netscan.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_netscan*"]

[tool.setuptools.package-data]
urirun_connector_netscan = ["connector.manifest.json"]
